--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -410,9 +410,13 @@ hr {
     margin: -1px;
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
-    border: 0
+    border: 0;
+    background-color: red;
 }
-
+.sr-only .fas {
+    color: red;
+    background-color: red;
+}
 .sr-only-focusable:active,
 .sr-only-focusable:focus {
     position: static;
