--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-
-
-.bg-repeat {
-    background: repeat;
-}
-
-.b-parallax {
-    background-attachment: fixed;
-}
-
 .d-bloc {
     color: rgba(255, 255, 255, .7);
 }
@@ -378,12 +368,6 @@ a[data-lightbox]:hover img {
     background: none;
 }
 
-
-
-.container {
-    max-width: 1000px;
-}
-
 .hero-bloc-text {
     font-size: 38px;
 }
@@ -399,11 +383,6 @@ a[data-lightbox]:hover img {
     text-align: center;
     font-weight: lighter;
     max-width: 520px;
-    margin: auto auto auto auto;
-}
-
-.tight-width-whitespace {
-    max-width: 600px;
     margin: auto auto auto auto;
 }
 
@@ -461,14 +440,6 @@ a[data-lightbox]:hover img {
     text-decoration: underline;
 }
 
-.bgc-white {
-    background-color: #FFFFFF;
-}
-
-.bgc-dark-slate-blue {
-    background-color: #364577;
-}
-
 .bgc-atomic-tangerine {
     background-color: #F3976C;
 }
@@ -504,26 +475,6 @@ a[data-lightbox]:hover img {
     border-color: #364577;
 }
 
-.bg-dots-bg {
-    background-image: url("./assets/dots-bg.png");
-}
-
-.bg-lines-h2-bg {
-    background-image: url("./assets/lines-h2-bg.png");
-}
-
-.bg-banniere {
-    background-image: url("./assets/background/la-chouette-agence-banniere.jpg");
-}
-
-.bg-presentation {
-    background-image: url("./assets/background/image-de-presentation.bmp");
-}
-
-
-
-
-
 /*------------------------------*/
 /*                              */
 /*             base             */
@@ -535,20 +486,30 @@ body {
     padding: 0;
     background: #FFF;
     overflow-x: hidden;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
 }
 
 a,
 button {
     transition: all .3s ease-in-out;
     outline: none;
+    text-decoration: none;
 }
 
 a:hover {
     text-decoration: none;
     cursor: pointer;
 }
+
+li {
+    list-style: none;
+}
+.container {
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1000px;
+}
+
 
 /*------------------------------*/
 /*             typo             */
@@ -588,7 +549,34 @@ p {
 
 p.contact {
     color: white;
-    font-weight: bold;
+}
+
+.text-center {
+    display: flex;
+    justify-content: center;
+}
+
+
+/*------------------------------*/
+/*              bg              */
+/*------------------------------*/
+
+.bg-dots-bg {
+    background-image: url("./assets/dots-bg.png");
+    background-repeat: repeat;
+}
+
+.bg-lines-h2-bg {
+    background-image: url("./assets/lines-h2-bg.png");
+    background-repeat: repeat;
+}
+
+.bg-banniere {
+    background-image: url("./assets/background/la-chouette-agence-banniere.jpg");
+}
+
+.bg-presentation {
+    background-image: url("./assets/background/image-de-presentation.bmp");
 }
 
 
@@ -598,126 +586,57 @@ p.contact {
 /*                              */
 /*------------------------------*/
 
-
 header {
+    margin: 30px;
+    padding: 0;
+}
+
+#bloc-0 {
+    box-sizing: border-box;
+    height: fit-content;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
+    align-items: center;
+    padding: 10px;
+    position: relative;
 }
 
 /*------------------------------*/
 /*            navbar            */
 /*------------------------------*/
-
-navbar {
-    text-transform: uppercase;
+#nav-toggle {
+    position: absolute;
+    bottom: -20px;
+    left: 0;
 }
-
-
-.navbar {
-    align-items: center;
+.navbar-nav {
+    font-weight: bold;
+    text-transform: uppercase;
+    width: fit-content;
     display: flex;
     flex-direction: row;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1440px;
 }
 
-.navbar-brand {
-    height: auto;
-    padding: 3px 15px;
-    font-size: 25px;
-    font-weight: normal;
-    font-weight: 600;
-    line-height: 44px;
+.navbar-nav li a{
+    margin: 10px;
+    padding: 20px;
+    border-radius: 25px;
+    transition: background-color 0.5s linear;
+}
+.navbar-nav li a:hover {
+    background-color:rgba(0, 0, 1, .25);
+    border-radius: 25px;
 }
 
-.nav-center .navbar-brand img {
-    margin: 0;
-}
-
-.navbar .nav {
-    float: right;
-    z-index: 1;
-}
-
-.nav > li {
-    float: left;
-    margin-top: 4px;
-    font-size: 16px;
-}
-
-.navbar-nav .open .dropdown-menu > li > a {
-    text-align: inherit;
-}
-
-.nav > li a:hover,
-.nav > li a:focus {
-    background: transparent;
-    font-weight: bold;
-}
-
-.navbar-toggle {
+/* .navbar-toggle {
     margin: 10px 10px 0 0;
     border: 0px;
-}
-
-.navbar-toggle:hover {
-    background: transparent;
 }
 
 .navbar-toggle .icon-bar {
     background-color: rgba(0, 0, 0, .5);
     width: 26px;
-}
-
-.nav-invert .navbar .nav {
-    float: left;
-}
-
-.nav-invert .navbar-header,
-.nav-invert .navbar-brand {
-    float: right;
-    position: relative;
-    z-index: 2;
-}
-
-
-
-.nav > li > .dropdown a {
-    background: none;
-    display: block;
-    padding: 14px 15px;
-}
-
-nav .caret {
-    margin: 0 5px;
-}
-
-.dropdown-menu .dropdown-menu {
-    top: -8px;
-    left: 100%;
-}
-
-.dropdown-menu .dropmenu-flow-right {
-    top: 100%;
-    left: 0;
-    margin-left: -1px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
-
-.dropdown-menu .dropdown span {
-    border: 4px solid black;
-    border-top-color: transparent;
-    border-right-color: transparent;
-    border-bottom-color: transparent;
-    margin: 6px -5px 0 0;
-    float: right;
-}
+} */
 
 /*------------------------------*/
 /*            spinner           */
@@ -732,17 +651,15 @@ nav .caret {
     background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
 }
 
-.formulaire,
-.formulaire-button {
-    display: flex;
-    justify-content: center;
+
+/* main */
+
+.tight-width-whitespace {
     max-width: 800px;
-    margin-left: auto;
-    margin-right: auto ;
+    margin: auto;
 }
 
 
-/* main */
 
 /* homepage */
 .citation {
@@ -756,6 +673,19 @@ nav .caret {
     font-weight: bold;
     font-style: italic;
 }
+
+
+/* talking */
+/* formulaire */
+.formulaire,
+.formulaire-button {
+    display: flex;
+    justify-content: center;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto ;
+}
+
 
 /*------------------------------*/
 /*                              */
@@ -778,9 +708,6 @@ footer,
     padding: 50px;
 }
 
-.bloc-sm {
-    padding: 20px 50px;
-}
 /* // utile que en desktop // */
 /* 
 @media (min-width: 768px) {
