--- a/style.css
+++ b/style.css
@@ -1,3 +1,342 @@
+.btn-d,
+.btn-d:hover,
+.btn-d:focus {
+    color: #FFF;
+    background: rgba(0, 0, 0, .3);
+}
+
+.btn-rd {
+    border-radius: 40px;
+}
+
+.btn-clean {
+    border: 1px solid rgba(0, 0, 0, .08);
+    border-bottom-color: rgba(0, 0, 0, .1);
+    text-shadow: 0 1px 0 rgba(0, 0, 1, .1);
+    box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
+}
+
+.btn:hover {
+    transform: scale(1.2);
+}
+
+.icon-md {
+    font-size: 30px;
+}
+
+.icon-lg {
+    font-size: 60px;
+}
+
+.panel-sq,
+.panel-sq .panel-heading,
+.panel-sq .panel-footer {
+    border-radius: 0;
+}
+
+.panel-rd {
+    border-radius: 30px;
+}
+
+.panel-rd .panel-heading {
+    border-radius: 29px 29px 0 0;
+}
+
+.panel-rd .panel-footer {
+    border-radius: 0 0 29px 29px;
+}
+
+.scrollToTop {
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    opacity: 0;
+    z-index: 500;
+    transition: all .3s ease-in-out;
+}
+
+.scrollToTop span {
+    margin-top: 6px;
+}
+
+.showScrollTop {
+    font-size: 14px;
+    opacity: 1;
+}
+
+a[data-lightbox] {
+    position: relative;
+    display: block;
+    text-align: center;
+}
+
+a[data-lightbox]:hover::before {
+    content: "+";
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
+    font-size: 32px;
+    width: 50px;
+    height: 50px;
+    margin-left: -25px;
+    border-radius: 50%;
+    background: rgba(0, 0, 0, .6);
+    color: #FFF;
+    font-weight: 100;
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+}
+
+a[data-lightbox]:hover img {
+    opacity: 0.6;
+    -webkit-animation-fill-mode: none;
+    animation-fill-mode: none;
+}
+
+#lightbox-modal {
+    display: flex;
+    align-items: center;
+}
+
+#lightbox-modal .modal-dialog {
+    width: 90%;
+    max-width: 1440px;
+    margin: 0 auto 0;
+}
+
+#lightbox-modal .modal-dialog img {
+    max-height: 90vh;
+    margin: 0 auto;
+}
+
+.lightbox-caption {
+    padding: 20px;
+    color: #FFF;
+    background: rgba(0, 0, 0, .5);
+    position: absolute;
+    left: 15px;
+    right: 15px;
+    bottom: 5px;
+}
+
+.close-lightbox {
+    color: #FFF;
+    font-size: 30px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 20;
+    background: rgba(0, 0, 0, .5);
+    border: none;
+    line-height: 30px;
+    padding: 0 9px 5px;
+    opacity: 0.3;
+}
+
+.close-lightbox:hover,
+.next-lightbox:hover,
+.prev-lightbox:hover {
+    opacity: 1.0;
+    color: #FFF;
+}
+
+.next-lightbox,
+.prev-lightbox {
+    font-size: 20px;
+    color: rgba(255, 255, 255, .9);
+    background: rgba(0, 0, 0, .5);
+    transition: all .2s ease-in-out;
+    position: absolute;
+    top: 45%;
+    z-index: 1;
+    opacity: 0.4;
+}
+
+.next-lightbox {
+    padding: 6px 8px 1px 13px;
+    right: 25px;
+}
+
+.prev-lightbox {
+    padding: 6px 13px 1px 10px;
+    left: 25px;
+}
+
+.snapshot-lb .modal-body {
+    padding-bottom: 45px;
+}
+
+.snapshot-lb .lightbox-caption {
+    padding: 0;
+    color: rgba(0, 0, 0, .5);
+    background: none;
+}
+
+.hero-bloc-text {
+    font-size: 38px;
+}
+
+.hero-bloc-text-sub {
+    font-size: 36px;
+}
+
+.statement-bloc-text {
+    line-height: 26px;
+    font-style: italic;
+    font-size: 20px;
+    text-align: center;
+    font-weight: lighter;
+    max-width: 520px;
+    margin: auto auto auto auto;
+}
+
+.cta-hero {
+    margin-top: 22px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    padding: 12px 28px 12px 28px;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.social {
+    max-width: 400px;
+    margin: auto auto auto auto;
+}
+
+
+
+.med-width-whitespace {
+    max-width: 800px;
+    margin: auto auto auto auto;
+    box-shadow: 0px 0px 0px #000000;
+}
+
+
+.white {
+    color: #FFFFFF;
+}
+
+.portfolio-thumb {
+    margin-bottom: 24px;
+}
+
+.portfolio-row {
+    margin-bottom: 44px;
+    margin-top: 50px;
+}
+
+.avatar {
+    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
+}
+
+.black-background {
+    background-color: rgba(165, 147, 99, 1);
+    padding: 40px 40px 40px 40px;
+}
+
+.bold-link {
+    font-weight: 900;
+    text-decoration: underline;
+}
+
+
+
+/*------------------------------*/
+/*                              */
+/*             base             */
+/*                              */
+/*------------------------------*/
+
+body {
+    margin: 0;
+    padding: 0;
+    background: #FFF;
+    overflow-x: hidden;
+}
+
+a,
+button {
+    transition: all .3s ease-in-out;
+    outline: none;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+li {
+    list-style: none;
+}
+
+.container {
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1000px;
+}
+
+.icons {
+    margin: 15px;
+}
+
+
+.text-center {
+    display: flex;
+    justify-content: center;
+}
+
+/*------------------------------*/
+/*             typo             */
+/*------------------------------*/
+
+body,
+input,
+label, 
+textarea {
+    font-family: 'Helvetica', sans-serif;
+    font-size: 1em;
+}
+
+h1 {
+    color: #F3976C;
+    font-weight: bold;
+    
+}
+
+h1.contact {
+    color: white;
+}
+h2 {
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #333333;
+    text-align: center;
+}
+h3 {
+    font-size: 22px;
+    line-height: 1.4em;
+    text-shadow: 0px 4px 9px rgba(0, 0, 0, 0.6);
+}
+
+p {
+    font-size: 1.2em;
+    color: #000000;
+    text-align: center;
+}
+
+p.contact {
+    color: white;
+}
+
+/* colors & border */
+
 .d-bloc {
     color: rgba(255, 255, 255, .7);
 }
@@ -163,283 +502,6 @@
     border-color: rgba(0, 0, 0, .3);
 }
 
-.voffset {
-    margin-top: 30px;
-}
-
-.voffset-lg {
-    margin-top: 80px;
-}
-
-
-
-.mg-md {
-    margin-top: 10px;
-    margin-bottom: 20px;
-}
-
-.mg-lg {
-    margin-top: 10px;
-    margin-bottom: 40px;
-}
-
-.btn {
-    margin: 0 5px 5px 0;
-}
-
-.btn.pull-right {
-    margin: 0 0 5px 5px;
-}
-
-.btn-d,
-.btn-d:hover,
-.btn-d:focus {
-    color: #FFF;
-    background: rgba(0, 0, 0, .3);
-}
-
-.btn-rd {
-    border-radius: 40px;
-}
-
-.btn-clean {
-    border: 1px solid rgba(0, 0, 0, .08);
-    border-bottom-color: rgba(0, 0, 0, .1);
-    text-shadow: 0 1px 0 rgba(0, 0, 1, .1);
-    box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
-}
-
-.btn:hover {
-    transform: scale(1.2);
-}
-
-.icon-md {
-    font-size: 30px;
-}
-
-.icon-lg {
-    font-size: 60px;
-}
-
-.panel-sq,
-.panel-sq .panel-heading,
-.panel-sq .panel-footer {
-    border-radius: 0;
-}
-
-.panel-rd {
-    border-radius: 30px;
-}
-
-.panel-rd .panel-heading {
-    border-radius: 29px 29px 0 0;
-}
-
-.panel-rd .panel-footer {
-    border-radius: 0 0 29px 29px;
-}
-
-.scrollToTop {
-    width: 40px;
-    height: 40px;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    opacity: 0;
-    z-index: 500;
-    transition: all .3s ease-in-out;
-}
-
-.scrollToTop span {
-    margin-top: 6px;
-}
-
-.showScrollTop {
-    font-size: 14px;
-    opacity: 1;
-}
-
-a[data-lightbox] {
-    position: relative;
-    display: block;
-    text-align: center;
-}
-
-a[data-lightbox]:hover::before {
-    content: "+";
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
-    font-size: 32px;
-    width: 50px;
-    height: 50px;
-    margin-left: -25px;
-    border-radius: 50%;
-    background: rgba(0, 0, 0, .6);
-    color: #FFF;
-    font-weight: 100;
-    z-index: 1;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-}
-
-a[data-lightbox]:hover img {
-    opacity: 0.6;
-    -webkit-animation-fill-mode: none;
-    animation-fill-mode: none;
-}
-
-#lightbox-modal {
-    display: flex;
-    align-items: center;
-}
-
-#lightbox-modal .modal-dialog {
-    width: 90%;
-    max-width: 900px;
-    margin: 0 auto 0;
-}
-
-#lightbox-modal .modal-dialog img {
-    max-height: 90vh;
-    margin: 0 auto;
-}
-
-.lightbox-caption {
-    padding: 20px;
-    color: #FFF;
-    background: rgba(0, 0, 0, .5);
-    position: absolute;
-    left: 15px;
-    right: 15px;
-    bottom: 5px;
-}
-
-.close-lightbox {
-    color: #FFF;
-    font-size: 30px;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    z-index: 20;
-    background: rgba(0, 0, 0, .5);
-    border: none;
-    line-height: 30px;
-    padding: 0 9px 5px;
-    opacity: 0.3;
-}
-
-.close-lightbox:hover,
-.next-lightbox:hover,
-.prev-lightbox:hover {
-    opacity: 1.0;
-    color: #FFF;
-}
-
-.next-lightbox,
-.prev-lightbox {
-    font-size: 20px;
-    color: rgba(255, 255, 255, .9);
-    background: rgba(0, 0, 0, .5);
-    transition: all .2s ease-in-out;
-    position: absolute;
-    top: 45%;
-    z-index: 1;
-    opacity: 0.4;
-}
-
-.next-lightbox {
-    padding: 6px 8px 1px 13px;
-    right: 25px;
-}
-
-.prev-lightbox {
-    padding: 6px 13px 1px 10px;
-    left: 25px;
-}
-
-.snapshot-lb .modal-body {
-    padding-bottom: 45px;
-}
-
-.snapshot-lb .lightbox-caption {
-    padding: 0;
-    color: rgba(0, 0, 0, .5);
-    background: none;
-}
-
-.hero-bloc-text {
-    font-size: 38px;
-}
-
-.hero-bloc-text-sub {
-    font-size: 36px;
-}
-
-.statement-bloc-text {
-    line-height: 26px;
-    font-style: italic;
-    font-size: 20px;
-    text-align: center;
-    font-weight: lighter;
-    max-width: 520px;
-    margin: auto auto auto auto;
-}
-
-.cta-hero {
-    margin-top: 22px;
-    color: #FFFFFF;
-    text-transform: uppercase;
-    padding: 12px 28px 12px 28px;
-    font-size: 16px;
-    font-weight: 700;
-}
-
-.social {
-    max-width: 400px;
-    margin: auto auto auto auto;
-}
-
-
-
-.med-width-whitespace {
-    max-width: 800px;
-    margin: auto auto auto auto;
-    box-shadow: 0px 0px 0px #000000;
-}
-
-.icons {
-    margin-bottom: 14px;
-    margin-top: 24px;
-}
-
-.white {
-    color: #FFFFFF;
-}
-
-.portfolio-thumb {
-    margin-bottom: 24px;
-}
-
-.portfolio-row {
-    margin-bottom: 44px;
-    margin-top: 50px;
-}
-
-.avatar {
-    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
-}
-
-.black-background {
-    background-color: rgba(165, 147, 99, 1);
-    padding: 40px 40px 40px 40px;
-}
-
-.bold-link {
-    font-weight: 900;
-    text-decoration: underline;
-}
-
 .bgc-atomic-tangerine {
     background-color: #F3976C;
 }
@@ -474,92 +536,6 @@ a[data-lightbox]:hover img {
     color: #364577;
     border-color: #364577;
 }
-
-/*------------------------------*/
-/*                              */
-/*             base             */
-/*                              */
-/*------------------------------*/
-
-body {
-    margin: 0;
-    padding: 0;
-    background: #FFF;
-    overflow-x: hidden;
-}
-
-a,
-button {
-    transition: all .3s ease-in-out;
-    outline: none;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: none;
-    cursor: pointer;
-}
-
-li {
-    list-style: none;
-}
-.container {
-    box-sizing: border-box;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1000px;
-}
-
-.text-center {
-    display: flex;
-    justify-content: center;
-}
-
-/*------------------------------*/
-/*             typo             */
-/*------------------------------*/
-
-body,
-input,
-label, 
-textarea {
-    font-family: 'Helvetica', sans-serif;
-    font-size: 1em;
-}
-
-h1 {
-    color: #F3976C;
-    font-weight: bold;
-    text-shadow: 0px 4px 9px rgba(0, 0, 0, 0.6);
-}
-
-h1.contact {
-    color: white;
-}
-
-h2 {
-    font-size: 22px;
-    line-height: 1.4em;
-}
-
-h3 {
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #333333;
-}
-
-p {
-    font-size: 1.2em;
-    color: #000000;
-    text-align: center;
-}
-
-p.contact {
-    color: white;
-}
-
-
 
 /*------------------------------*/
 /*              bg              */
@@ -636,7 +612,7 @@ header {
     border-radius: 25px;
 }
 
-/* .navbar-toggle {
+.navbar-toggle {
     margin: 10px 10px 0 0;
     border: 0px;
 }
@@ -644,7 +620,7 @@ header {
 .navbar-toggle .icon-bar {
     background-color: rgba(0, 0, 0, .5);
     width: 26px;
-} */
+}
 
 /*------------------------------*/
 /*            spinner           */
@@ -667,25 +643,100 @@ header {
 /*------------------------------*/
 
 
-/* homepage */
+/* presentation */
 .presentation {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
+}
+
+/* services */
+.services {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.services__list-icon {
+    display: flex;
+    flex-direction: row;
+}
+.services__list-icon-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 20px;
+    width: 300px;
+}
+.services__list-icon-column p {
+    text-align: center;
+    padding: 5px;
+}
+
+/* citation */
+.services__citation {
+    display: flex;
+    justify-content: center;
+    border-left: rgba(0, 0, 1, .25) solid 3px;
 }
 
 .citation {
+    max-width: 500px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 500px;
 }
 
 .citation__text {
-    color:rgba(0, 0, 0, 0.7);
+    color:rgba(0, 0, 0, 0.5);
+    text-align: justify;
     font-weight: bold;
     font-style: italic;
 }
+
+figure {
+    margin: 0;
+    padding: 0 0 20px 20px;
+}
+
+/* about us */
+
+.about-us-wanted {
+    font-weight: bold;
+    text-shadow: 0px 4px 9px rgba(0, 0, 0, 0.6);
+}
+
+/* portfolio */
+
+article img {
+    max-width: 300px;
+    transform: scale(1);
+    transition: transform 0.25s linear;
+    display: flex;
+}
+article img:hover {
+    transform: scale(1.2);
+    transition: transform 0.25s linear;
+}
+
+.portfolio-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.col-sm-6 {
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/* CONTACT  */
 
 /* talking */
 .talking {
@@ -697,7 +748,7 @@ header {
 .formulaire-button {
     display: flex;
     justify-content: center;
-    max-width: 800px;
+    width: 600px;
     margin-left: auto;
     margin-right: auto ;
 }
