--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 * {
     margin: 0;
     padding: 0;
-    padding-inline-start: 0;
+    padding-inline-start: unset;
 }
 
 body {
@@ -549,6 +549,12 @@ article img {
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+}
+
+.bloc-sm {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80%;
 }
 }
 
