--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ a:active {
 	color: #000000;
 }
 h1 {
-	color: #f3976c;
+	color: #a85c39;
 }
 h1.contact {
 	color: white;
@@ -132,10 +132,10 @@ p.contact {
 }
 
 .bgc-atomic-tangerine {
-	background-color: #f3976c;
+	background-color: #a85c39;
 }
 .btn-atomic-tangerine {
-	background: #f3976c;
+	background: #a85c39;
 	color: #ffffff;
 }
 .btn-atomic-tangerine:hover {
@@ -161,7 +161,7 @@ p.contact {
 	color: #cccccc;
 }
 .ltc-atomic-tangerine {
-	color: #f3976c;
+	color: #a85c39;
 }
 .ltc-atomic-tangerine:hover {
 	color: #c27956;
@@ -339,7 +339,7 @@ p.contact {
 	margin-right: auto;
 }
 .citation__text {
-	color: rgba(0, 0, 0, 0.5);
+	color: rgba(0, 0, 0, 1);
 	text-align: justify;
 	font-weight: 600;
 	font-style: italic;
@@ -353,9 +353,9 @@ figure {
 /*       about us       */
 .about-us {
 	max-width: 800px;
+	font-weight: bold;
 }
 .about-us-wanted {
-	font-weight: bold;
 	text-shadow: 0px 1px 0px rgba(0, 0, 0, 1);
 	margin: 15px;
 	font-size: 25px;
@@ -485,7 +485,6 @@ footer,
 	display: flex;
 	justify-content: center;
 }
-
 /*------------------------------*/
 /*                              */
 /*        media quieries        */
